--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-cookie": "3.0.5",
     "lodash-es": "4.17.21",
     "mitt": "3.0.1",
+    "ml-table-column": "^0.0.3",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "path-browserify": "1.0.1",
